# META-openenv

./: colab_training.ipynb
my_env/: CLAUDE.md  GEMINI.md  README.md  RuntimeTerror_ProblemStatement_v2.md  __init__.py  agent_models.py  client.py  cloud-resource-negotiation-arena-757369.md  config.py  generate_plots.py  implementation_plan.md  models.py  openenv.yaml  pyproject.toml  update_notebook.py
my_env/agents/: __init__.py  base_agent.py  data_agent.py  devops_agent.py  frontend_agent.py  llm_agent.py  ml_agent.py  rogue_agent.py
my_env/learning/: __init__.py  cost_estimator.py  trust_graph.py  value_model.py
my_env/metrics/: __init__.py  collector.py  visualizer.py
my_env/openenv_cloud_arena.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
my_env/scenarios/: __init__.py  scenarios.py
my_env/server/: __init__.py  adversarial_engine.py  app.py  cloud_arena_environment.py  cluster_state.py  deception_detection.py  dependent_tasks.py  gradio_dashboard.py  market_dynamics.py  negotiation_engine.py  oversight_agent.py  reward_system.py  task_system.py  trust_manager.py
my_env/training/: __init__.py  colab_training.ipynb  training_runner.py  trl_training.py
